# tp-c-2iz

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
cmd/: CMakeLists.txt  main.c
cov/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  cmake_clean_target.cmake  coverage.info  depend.internal  depend.make  flags.make  link.txt  menu.c.gcda  menu.c.gcno  menu.c.gcov  no_procs.c.gcda  no_procs.c.gcno  no_procs.c.gcov  with_procs.c.gcda  with_procs.c.gcno  with_procs.c.gcov
cov/cov/: index-sort-f.html  index-sort-l.html  index.html
cov/cov/menu/: index-sort-f.html  index-sort-l.html  index.html  menu.c.func-sort-c.html  menu.c.func.html  menu.c.gcov.html
cov/cov/no_procs/: index-sort-f.html  index-sort-l.html  index.html  no_procs.c.func-sort-c.html  no_procs.c.func.html  no_procs.c.gcov.html
cov/cov/with_procs/: index-sort-f.html  index-sort-l.html  index.html  with_procs.c.func-sort-c.html  with_procs.c.func.html  with_procs.c.gcov.html
cov/coverage/: index-sort-f.html  index-sort-l.html  index.html
cov/coverage/no_procs/: index-sort-f.html  index-sort-l.html  index.html  no_procs.c.func-sort-c.html  no_procs.c.func.html  no_procs.c.gcov.html
cov/coverage/with_procs/: index-sort-f.html  index-sort-l.html  index.html  with_procs.c.func-sort-c.html  with_procs.c.func.html  with_procs.c.gcov.html
src/: CMakeLists.txt
src/menu/: CMakeLists.txt  menu.c  menu.h
src/no_procs/: CMakeLists.txt  no_procs.c  no_procs.h
src/no_threads/: CMakeLists.txt  no_threads.c  no_threads.h
src/string_gen/: string_gen.h
src/with_procs/: CMakeLists.txt  with_procs.c  with_procs.h
src/with_threads/: CMakeLists.txt  with_threads.c  with_threads.h
src/word_gen/: CMakeLists.txt  word_gen.py
src/words_gen/: word_gen.py  words.txt
tests/: CMakeLists.txt  tests.cpp
tests/menu/: CMakeLists.txt  tests.cpp
tests/no_procs/: CMakeLists.txt  main.cpp  tests.cpp
tests/stress_tests/: CMakeLists.txt  stress_tests.cpp
tests/with_procs/: CMakeLists.txt  tests.cpp
